# disease_database

./: .gitignore  README.md  article_query.py  data_analysis.py  extract_article_data.py  extract_data.py  extract_meta_data.py  municipalities_1869.xlsx  preproc.py  pyproject.toml  query.py  query_map.py  query_polars.py  requirements.txt
archive/: DelpherAPISearchbySubject.txt.ipynb  DelpherAPISearchbyTitle.txt.ipynb  query.py  query_space.py
archive/maps/: cholera_1866.parquet  cholera_1868.parquet  query_map.py  readme.md
data_conversion/: combine_and_chunk.py  extract_article_data.py  extract_meta_data.py  utils_data_conversion.py
delpher_api/: README.md  combine_and_chunk.py  dataset.csv  harvest_article_content.py  harvest_article_ids.py  harvest_meta_data.py  query.py  utils_delpher_api.py
delpher_api/archive/: query.py
harvest_delpher_api/: README.md  combine_and_chunk.py  harvest_article_ids.py  harvest_meta_data.py  utils_delpher_api.py
harvest_delpher_api/archive/: query.py
img/: disease_database_flow.drawio
initialresults/city-specific searches/: query_experiment_amsterdam_smallpox.py  query_experiment_franekeradeel_cholera.py  query_experiment_fullcountry_cholera.py  query_experiment_leeuwarden_smallpox.py  query_experiment_leiden_cholera.py  (+3 more)
maps/: cholera_1864.parquet  cholera_1865.parquet  cholera_1867.parquet  map.R
process_open_archive/: combine_and_chunk.py  extract_article_data.py  extract_meta_data.py
raw_data/: .gitignore  disease_search_terms.xlsx  query_names.xlsx  query_names_1869.xlsx  readme.md
src/analysis/: create_map.R  (+1 more)
(+85 files in other folders)
