[project]
name = "disease-database"
version = "0.1.0"
description = "Code to harvest and process Delpher data into a disease map"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipython>=8.28.0",
    "lxml>=5.3.0",
    "matplotlib>=3.9.2",
    "plotnine>=0.13.6",
    "polars>=1.9.0",
    "pyarrow>=17.0.0",
    "pyqt6>=6.7.1",
    "requests>=2.32.3",
    "ruff>=0.6.9",
    "sruthi>=2.0.0",
    "tqdm>=4.66.5",
]
